Complete hero h1 and h3 css animation

--- a/index.html
+++ b/index.html
@@ -213,7 +213,14 @@
         <div loading="eager" class="hero-background"></div>
         <div class="hero-content">
           <div class="hero-text">
-            <h1 class="hero-heading">Osaka.</h1>
+            <h1 class="hero-heading bouncy-text">
+              <span>O</span>
+              <span>S</span>
+              <span>A</span>
+              <span>K</span>
+              <span>A</span>
+              <span>.</span>
+            </h1>
             <h3>The City that's Fun<em>!</em></h3>
           </div>
         </div>
@@ -234,7 +241,7 @@
           <h3>The City That Will Pleasantly Surprise!</h3>
 
           <p>
-            Explore Japan's most <span>playful</span> city.
+            <span>Explore</span> Japan's most <span>playful</span> city.
             <br />
             <br />
           </p>
@@ -245,7 +252,7 @@
                 src="./images/castle.webp"
                 alt="Osaka castle"
               />
-              Enjoy beautiful temples.
+              <span>Enjoy </span> beautiful temples.
             </li>
             <li>
               <img
@@ -253,7 +260,7 @@
                 src="./images/chair-swing-ride.webp"
                 alt="Osaka castle"
               />
-              Visit World-class attractions.
+              <span>Visit</span> World-class attractions.
             </li>
             <li>
               <img
@@ -261,7 +268,7 @@
                 src="./images/ramen.webp"
                 alt="Osaka castle"
               />
-              Eat delicious food at every corner.
+              <span>Eat</span> delicious food at every corner.
             </li>
             <li>
               <img
@@ -269,7 +276,7 @@
                 src="./images/online-shopping.webp"
                 alt="Osaka castle"
               />
-              Shop amazing products & souvenirs.
+              <span>Shop</span> amazing products & souvenirs.
             </li>
           </ul>
           <br />
