--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <span>A</span>
               <span>.</span>
             </h1>
-            <h3>The City that's Fun<em>!</em></h3>
+            <h3>The City that's <span>Fun!</span></h3>
           </div>
         </div>
       </div>
@@ -260,7 +260,7 @@
                 src="./images/chair-swing-ride.webp"
                 alt="Osaka castle"
               />
-              <span>Visit</span> World-class attractions.
+              <span>Visit</span> world-class attractions.
             </li>
             <li>
               <img
