--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
           </div>
           <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="attractions.html">Attractions</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Attractions</a></li>
+            <li><a href="index.html">Events</a></li>
+            <li><a href="index.html">About</a></li>
           </ul>
           <div class="nav-buttons">
             <button class="btn btn-secondary">Sign Up</button>
