Fix hero image and text responsivenss

--- a/index.html
+++ b/index.html
@@ -208,94 +208,95 @@
         </div>
       </header>
 
-      <!-- hero -->
-      <div class="hero">
-        <div loading="eager" class="hero-background"></div>
-        <div class="hero-content">
-          <div class="hero-text">
-            <h1 class="hero-heading bouncy-text">
-              <span>O</span>
-              <span>S</span>
-              <span>A</span>
-              <span>K</span>
-              <span>A</span>
-              <span>.</span>
-            </h1>
-            <h3>The City that's <span>Fun!</span></h3>
+      <main>
+        <!-- hero -->
+        <section class="hero">
+          <div loading="eager" class="hero-background"></div>
+          <div class="hero-content">
+            <div class="hero-text">
+              <h1 class="hero-heading bouncy-text">
+                <span>O</span>
+                <span>S</span>
+                <span>A</span>
+                <span>K</span>
+                <span>A</span>
+                <span>.</span>
+              </h1>
+              <h3>The City that's <span>Fun!</span></h3>
+            </div>
+          </div>
+        </section>
+
+        <!-- Description -->
+        <div class="description">
+          <div class="description-image">
+            <img
+              loading="lazy"
+              class="image-1"
+              src="./images/description-gif.gif"
+              alt=""
+            />
+          </div>
+          <div class="description-content">
+            <h2>Osaka.</h2>
+            <h3>The City That Will Pleasantly Surprise!</h3>
+
+            <p>
+              <span>Explore</span> Japan's most <span>playful</span> city.
+              <br />
+              <br />
+            </p>
+            <ul>
+              <li>
+                <img
+                  loading="lazy"
+                  src="./images/castle.webp"
+                  alt="Osaka castle"
+                />
+                <span>Enjoy </span> beautiful temples.
+              </li>
+              <li>
+                <img
+                  loading="lazy"
+                  src="./images/chair-swing-ride.webp"
+                  alt="Osaka castle"
+                />
+                <span>Visit</span> world-class attractions.
+              </li>
+              <li>
+                <img
+                  loading="lazy"
+                  src="./images/ramen.webp"
+                  alt="Osaka castle"
+                />
+                <span>Eat</span> delicious food at every corner.
+              </li>
+              <li>
+                <img
+                  loading="lazy"
+                  src="./images/online-shopping.webp"
+                  alt="Osaka castle"
+                />
+                <span>Shop</span> amazing products & souvenirs.
+              </li>
+            </ul>
+            <br />
+            <br />
+            <p>Your next adventure in <strong>OSAKA</strong> awaits!</p>
           </div>
         </div>
-      </div>
 
-      <!-- Description -->
-      <div class="description">
-        <div class="description-image">
-          <img
-            loading="lazy"
-            class="image-1"
-            src="./images/description-gif.gif"
-            alt=""
-          />
-        </div>
-        <div class="description-content">
-          <h2>Osaka.</h2>
-          <h3>The City That Will Pleasantly Surprise!</h3>
-
-          <p>
-            <span>Explore</span> Japan's most <span>playful</span> city.
-            <br />
-            <br />
-          </p>
-          <ul>
-            <li>
-              <img
-                loading="lazy"
-                src="./images/castle.webp"
-                alt="Osaka castle"
-              />
-              <span>Enjoy </span> beautiful temples.
-            </li>
-            <li>
-              <img
-                loading="lazy"
-                src="./images/chair-swing-ride.webp"
-                alt="Osaka castle"
-              />
-              <span>Visit</span> world-class attractions.
-            </li>
-            <li>
-              <img
-                loading="lazy"
-                src="./images/ramen.webp"
-                alt="Osaka castle"
-              />
-              <span>Eat</span> delicious food at every corner.
-            </li>
-            <li>
-              <img
-                loading="lazy"
-                src="./images/online-shopping.webp"
-                alt="Osaka castle"
-              />
-              <span>Shop</span> amazing products & souvenirs.
-            </li>
-          </ul>
-          <br />
-          <br />
-          <p>Your next adventure in <strong>OSAKA</strong> awaits!</p>
-        </div>
-      </div>
-
-      <!-- Divider -->
-      <div class="wave-container">
-        <svg
-          class="wave-line wave-1"
-          viewBox="0 0 400 30"
-          preserveAspectRatio="none"
-        >
-          <!-- Multiple waves to ensure smooth continuous motion -->
-          <path
-            class="wave-path"
-            d="M-50,15 
+        <!-- Divider -->
+        <div class="wave-container">
+          <svg
+            class="wave-line wave-1"
+            viewBox="0 0 400 30"
+            preserveAspectRatio="none"
+          >
+            <!-- Multiple waves to ensure smooth continuous motion -->
+            <path
+              class="wave-path"
+              d="M-50,15 
             Q-37.5,5 -25,15 
             Q-12.5,25 0,15 
             Q12.5,5 25,15 
@@ -316,13 +317,17 @@
             Q387.5,25 400,15
             Q412.5,5 425,15 
             Q437.5,25 450,15"
-          ></path>
-        </svg>
-        <svg class="wave-line" viewBox="0 0 400 30" preserveAspectRatio="none">
-          <!-- Multiple waves to ensure smooth continuous motion -->
-          <path
-            class="wave-path wave-2"
-            d="M-50,15 
+            ></path>
+          </svg>
+          <svg
+            class="wave-line"
+            viewBox="0 0 400 30"
+            preserveAspectRatio="none"
+          >
+            <!-- Multiple waves to ensure smooth continuous motion -->
+            <path
+              class="wave-path wave-2"
+              d="M-50,15 
             Q-37.5,5 -25,15 
             Q-12.5,25 0,15 
             Q12.5,5 25,15 
@@ -343,115 +348,115 @@
             Q387.5,25 400,15
             Q412.5,5 425,15 
             Q437.5,25 450,15"
-          ></path>
-        </svg>
-      </div>
+            ></path>
+          </svg>
+        </div>
 
-      <!-- featured cards -->
-      <div class="featured-cards">
-        <h2>Top Activities in Osaka</h2>
-        <div class="cards">
-          <div class="card">
-            <div class="card-bg card-1"></div>
-            <h4>Attractions</h4>
-            <div class="card-details">
-              <div class="details-content">
-                <p class="card-title">Osaka Castle</p>
-                <p class="card-description">
-                  Explore Osaka Castle, a symbol of Japan's past. Built over 400
-                  years ago, its strong walls and golden details tell stories of
-                  samurai and ancient battles. Wander through peaceful gardens
-                  and enjoy stunning city views. A visit to Osaka Castle is a
-                  step back in time.
-                </p>
+        <!-- featured cards -->
+        <div class="featured-cards">
+          <h2>Top Activities in Osaka</h2>
+          <div class="cards">
+            <div class="card">
+              <div class="card-bg card-1"></div>
+              <h4>Attractions</h4>
+              <div class="card-details">
+                <div class="details-content">
+                  <p class="card-title">Osaka Castle</p>
+                  <p class="card-description">
+                    Explore Osaka Castle, a symbol of Japan's past. Built over
+                    400 years ago, its strong walls and golden details tell
+                    stories of samurai and ancient battles. Wander through
+                    peaceful gardens and enjoy stunning city views. A visit to
+                    Osaka Castle is a step back in time.
+                  </p>
+                </div>
+                <div class="card-image">
+                  <img loading="lazy" src="./images/osaka-castle2.png" alt="" />
+                </div>
               </div>
-              <div class="card-image">
-                <img loading="lazy" src="./images/osaka-castle2.png" alt="" />
-              </div>
-            </div>
-            <div class="icon-container">
-              <span class="material-symbols-outlined arrow">
-                arrow_forward_ios
-              </span>
-              <span class="material-symbols-outlined close"> close </span>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-bg card-2"></div>
-            <h4>Eating</h4>
-            <div class="card-details">
-              <div class="details-content">
-                <p class="card-title">Dotonbori</p>
-                <p class="card-description">
-                  Indulge in the flavors of Dotonbori, Osaka's famous food
-                  district. Savor iconic street foods like takoyaki,
-                  okonomiyaki, and kushikatsu as you wander the neon-lit
-                  streets. With every bite, experience the vibrant spirit and
-                  culinary magic that make Dotonbori a must-visit.
-                </p>
-              </div>
-              <div class="card-image">
-                <img loading="lazy" src="./images/takoyaki-2.png" alt="" />
+              <div class="icon-container">
+                <span class="material-symbols-outlined arrow">
+                  arrow_forward_ios
+                </span>
+                <span class="material-symbols-outlined close"> close </span>
               </div>
             </div>
-            <div class="icon-container">
-              <span class="material-symbols-outlined arrow">
-                arrow_forward_ios
-              </span>
-              <span class="material-symbols-outlined close"> close </span>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-bg card-3"></div>
-            <h4>Shopping</h4>
-            <div class="card-details">
-              <div class="details-content">
-                <p class="card-title">Shinsaibashi</p>
-                <p class="card-description">
-                  Discover Shinsaibashi, Osaka's premier shopping district,
-                  where traditional and modern collide. Stroll through the
-                  bustling arcade filled with trendy boutiques, luxury brands,
-                  and unique local shops. Whether you're hunting for fashion, or
-                  souvenirs, Shinsaibashi has it all.
-                </p>
+            <div class="card">
+              <div class="card-bg card-2"></div>
+              <h4>Eating</h4>
+              <div class="card-details">
+                <div class="details-content">
+                  <p class="card-title">Dotonbori</p>
+                  <p class="card-description">
+                    Indulge in the flavors of Dotonbori, Osaka's famous food
+                    district. Savor iconic street foods like takoyaki,
+                    okonomiyaki, and kushikatsu as you wander the neon-lit
+                    streets. With every bite, experience the vibrant spirit and
+                    culinary magic that make Dotonbori a must-visit.
+                  </p>
+                </div>
+                <div class="card-image">
+                  <img loading="lazy" src="./images/takoyaki-2.png" alt="" />
+                </div>
               </div>
-              <div class="card-image">
-                <img loading="lazy" src="./images/namba-2.png" alt="" />
+              <div class="icon-container">
+                <span class="material-symbols-outlined arrow">
+                  arrow_forward_ios
+                </span>
+                <span class="material-symbols-outlined close"> close </span>
               </div>
             </div>
-            <div class="icon-container">
-              <span class="material-symbols-outlined arrow">
-                arrow_forward_ios
-              </span>
-              <span class="material-symbols-outlined close"> close </span>
+            <div class="card">
+              <div class="card-bg card-3"></div>
+              <h4>Shopping</h4>
+              <div class="card-details">
+                <div class="details-content">
+                  <p class="card-title">Shinsaibashi</p>
+                  <p class="card-description">
+                    Discover Shinsaibashi, Osaka's premier shopping district,
+                    where traditional and modern collide. Stroll through the
+                    bustling arcade filled with trendy boutiques, luxury brands,
+                    and unique local shops. Whether you're hunting for fashion,
+                    or souvenirs, Shinsaibashi has it all.
+                  </p>
+                </div>
+                <div class="card-image">
+                  <img loading="lazy" src="./images/namba-2.png" alt="" />
+                </div>
+              </div>
+              <div class="icon-container">
+                <span class="material-symbols-outlined arrow">
+                  arrow_forward_ios
+                </span>
+                <span class="material-symbols-outlined close"> close </span>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Travel Guide -->
-      <div class="guide">
-        <div class="guide-container">
-          <div loading="lazy" class="guide-image"></div>
-          <div class="guide-text">
-            <div class="text">
-              <h3>Meet Your Travel Guide</h3>
-              <p>
-                Konnichiwa! I'm <strong>Shinji-kun</strong>, your friendly Osaka
-                guide. Are you ready to unlock the Osaka's hidden gems and
-                must-see spots? From delicious street food to amazing
-                attractions, I'll guide you through the best of what Osaka has
-                to offer. Subscribe to our email to get more amazing tips!
-              </p>
-            </div>
-            <div class="email">
-              <input type="email" placeholder="Enter your email" />
-              <button type="submit" id="subsribe">Subscribe</button>
+        <!-- Travel Guide -->
+        <section class="guide">
+          <div class="guide-container">
+            <div loading="lazy" class="guide-image"></div>
+            <div class="guide-text">
+              <div class="text">
+                <h3>Meet Your Travel Guide</h3>
+                <p>
+                  Konnichiwa! I'm <strong>Shinji-kun</strong>, your friendly
+                  Osaka guide. Are you ready to unlock the Osaka's hidden gems
+                  and must-see spots? From delicious street food to amazing
+                  attractions, I'll guide you through the best of what Osaka has
+                  to offer. Subscribe to our email to get more amazing tips!
+                </p>
+              </div>
+              <div class="email">
+                <input type="email" placeholder="Enter your email" />
+                <button type="submit" id="subsribe">Subscribe</button>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-
+        </section>
+      </main>
       <!-- Footer -->
       <footer>
         <div class="footer-content">
