--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
     </div>
 
     <main>
+      
       <!-- navbar -->
-      <div id="navbar">
-        <nav>
+        <nav id="navbar">
           <div class="nav-logo">
             <img src="./images/logo.svg" alt="logo" />
           </div>
@@ -186,7 +186,7 @@
             <button class="btn btn-primary">Sign In</button>
           </div>
         </nav>
-      </div>
+  
 
       <!-- mobile navbar -->
       <header id="mobile-navbar">
