--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div id="sidebar" aria-label="Main Navigation">
       <div class="sidebar-container">
         <div id="close-btn" class="close-signup-icon">X</div>
-        <nav>
+        <nav id="sidebar-nav">
           <div class="sidebar-nav-logo">
             <img src="./images/nav-logo.png" alt="logo" />
           </div>
@@ -169,24 +169,22 @@
     </div>
 
     <main>
-      
       <!-- navbar -->
-        <nav id="navbar">
-          <div class="nav-logo">
-            <img src="./images/logo.svg" alt="logo" />
-          </div>
-          <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Attractions</a></li>
-            <li><a href="index.html">Events</a></li>
-            <li><a href="index.html">About</a></li>
-          </ul>
-          <div class="nav-buttons">
-            <button class="btn btn-secondary">Sign Up</button>
-            <button class="btn btn-primary">Sign In</button>
-          </div>
-        </nav>
-  
+      <nav id="navbar">
+        <div class="nav-logo">
+          <img src="./images/logo.svg" alt="logo" />
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Attractions</a></li>
+          <li><a href="index.html">Events</a></li>
+          <li><a href="index.html">About</a></li>
+        </ul>
+        <div class="nav-buttons">
+          <button class="btn btn-secondary">Sign Up</button>
+          <button class="btn btn-primary">Sign In</button>
+        </div>
+      </nav>
 
       <!-- mobile navbar -->
       <header id="mobile-navbar">
