Complete description section image and ul li responsiveness

--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
                   src="./images/castle.webp"
                   alt="Osaka castle"
                 />
-                <span>Enjoy </span> beautiful temples.
+                <div class="text-content">
+                  <span>Enjoy </span> beautiful temples.
+                </div>
               </li>
               <li>
                 <img
@@ -259,7 +261,9 @@
                   src="./images/chair-swing-ride.webp"
                   alt="Osaka castle"
                 />
-                <span>Visit</span> world-class attractions.
+                <div class="text-content">
+                  <span>Visit</span> world-class attractions.
+                </div>
               </li>
               <li>
                 <img
@@ -267,7 +271,9 @@
                   src="./images/ramen.webp"
                   alt="Osaka castle"
                 />
-                <span>Eat</span> delicious food at every corner.
+                <div class="text-content">
+                  <span>Eat</span> delicious food at every corner.
+                </div>
               </li>
               <li>
                 <img
@@ -275,7 +281,9 @@
                   src="./images/online-shopping.webp"
                   alt="Osaka castle"
                 />
-                <span>Shop</span> amazing products & souvenirs.
+                <div class="text-content">
+                  <span>Shop</span> amazing products & souvenirs.
+                </div>
               </li>
             </ul>
             <br />
